--- a/otoku/pubspec.yaml
+++ b/otoku/pubspec.yaml
@@ -45,7 +45,7 @@ dependencies:
   geocoding: ^2.1.0
   scroll_page_view: ^1.0.2
   provider: ^6.0.5
-  animated_bottom_navigation_bar: ^1.3.0
+  stylish_bottom_bar: ^1.0.3
 
 dev_dependencies:
   flutter_test:
