--- a/otoku/pubspec.yaml
+++ b/otoku/pubspec.yaml
@@ -34,18 +34,29 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  #animasyonlu yazı
   animated_text_kit: ^4.2.2
-  salomon_bottom_bar: ^3.3.2
+  # firebase
   firebase_auth: ^4.9.0
   firebase_core: ^2.15.1
   firebase_storage: ^11.2.6
   cloud_firestore: ^4.9.1
+  # indekator
   smooth_page_indicator: ^1.1.0
+  #konum
   geolocator: ^10.0.1
   geocoding: ^2.1.0
+  #pageview -slayt
   scroll_page_view: ^1.0.2
+  #provide
   provider: ^6.0.5
+  #navigator
   stylish_bottom_bar: ^1.0.3
+  #veritabanı
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  flutter_timer_countdown: ^1.0.5
+  #videoplayer
 
 dev_dependencies:
   flutter_test:
@@ -71,6 +82,12 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/image/
+    - assets/video/
+    - assets/avaters/
+    - assets/Backgrounds/
+    - assets/icons/
+    - assets/RiveAssets/
+
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
@@ -87,7 +104,16 @@ flutter:
   fonts:
     - family: BlackOpsOne # Kullanmak istediğiniz fontun adını buraya yazın
       fonts:
-        - asset: assets/fonts/BlackOpsOne-Regular.ttf
+        - asset: assets/Fonts/BlackOpsOne-Regular.ttf
+    - family: Intel
+      fonts:
+        - asset: assets/Fonts/Inter-Regular.ttf
+        - asset: assets/Fonts/Inter-SemiBold.ttf
+          weight: 600
+    - family: Poppins
+      fonts:
+        - asset: assets/Fonts/Poppins-Bold.ttf
+          weight: 700
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
   #   - family: Trajan Pro
