--- a/otoku/pubspec.yaml
+++ b/otoku/pubspec.yaml
@@ -34,11 +34,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  #animasyonlu yazı
   animated_text_kit: ^4.2.2
   # firebase
   firebase_auth: ^4.9.0
-  firebase_core: ^2.15.1
+  firebase_core: ^2.18.0
   firebase_storage: ^11.2.6
   cloud_firestore: ^4.9.1
   # indekator
@@ -53,10 +52,11 @@ dependencies:
   #navigator
   stylish_bottom_bar: ^1.0.3
   #veritabanı
-  hive: ^2.2.3
-  hive_flutter: ^1.1.0
+  sqflite: ^2.3.0
   flutter_timer_countdown: ^1.0.5
-  #videoplayer
+  #border
+  dotted_border: ^2.1.0
+  image_picker: ^1.0.4
 
 dev_dependencies:
   flutter_test:
@@ -82,11 +82,6 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/image/
-    - assets/video/
-    - assets/avaters/
-    - assets/Backgrounds/
-    - assets/icons/
-    - assets/RiveAssets/
 
   #   - images/a_dot_ham.jpeg
 
@@ -114,9 +109,6 @@ flutter:
       fonts:
         - asset: assets/Fonts/Poppins-Bold.ttf
           weight: 700
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
   #       - asset: fonts/TrajanPro_Bold.ttf
