--- a/otoku/pubspec.yaml
+++ b/otoku/pubspec.yaml
@@ -82,6 +82,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/image/
+    - assets/json/
 
   #   - images/a_dot_ham.jpeg
 
