--- a/otoku/pubspec.yaml
+++ b/otoku/pubspec.yaml
@@ -60,6 +60,10 @@ dependencies:
   image_picker: ^1.0.4
   #connectivity
   connectivity_plus: ^5.0.1
+  #radio button
+  group_radio_button: ^1.3.0
+  #setting ui
+  babstrap_settings_screen: ^0.1.6
 
 dev_dependencies:
   flutter_test:
