--- a/otoku/pubspec.yaml
+++ b/otoku/pubspec.yaml
@@ -64,6 +64,8 @@ dependencies:
   group_radio_button: ^1.3.0
   #setting ui
   babstrap_settings_screen: ^0.1.6
+  intl: ^0.19.0
+  random_avatar: ^0.0.8
 
 dev_dependencies:
   flutter_test:
